--- a/app/src/main/res/menu/popup_menu_main.xml
+++ b/app/src/main/res/menu/popup_menu_main.xml
@@ -1,8 +1,5 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menu_item_settings"
-        android:title="Settings"/>
-    <item
-        android:id="@+id/menu_item_about"
-        android:title="About"/>
+        android:title="@string/settings_title" />
 </menu>
