--- a/app/src/main/res/menu/bottom_navigation_main.xml
+++ b/app/src/main/res/menu/bottom_navigation_main.xml
@@ -1,11 +1,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/navigation_photos"
-        android:title="@string/navigation_photos"
-        android:icon="@drawable/ic_image" />
-    <item android:id="@+id/navigation_album"
-        android:title="@string/navigation_album"
-        android:icon="@drawable/ic_photo_library" />
-    <item android:id="@+id/navigation_favorite"
-        android:title="@string/navigation_favorite"
-        android:icon="@drawable/ic_favorite" />
+    <item
+        android:id="@+id/navigation_photos"
+        android:checked="true"
+        android:icon="@drawable/ic_baseline_image"
+        android:title="@string/navigation_photos" />
+    <item
+        android:id="@+id/navigation_album"
+        android:checked="true"
+        android:icon="@drawable/ic_baseline_photo_library"
+        android:title="@string/navigation_album" />
+    <item
+        android:id="@+id/navigation_favorite"
+        android:checked="false"
+        android:icon="@drawable/ic_baseline_favorite"
+        android:title="@string/navigation_favorite" />
 </menu>
