--- a/app/src/main/res/menu/popup_menu_main.xml
+++ b/app/src/main/res/menu/popup_menu_main.xml
@@ -1,5 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/menu_item_vault"
+        android:title="@string/main_appbar_more_vault" />
+    <item
         android:id="@+id/menu_item_settings"
         android:title="@string/settings_title" />
 </menu>
