Sửa lại màn hình login vault (chưa đủ); Thay frame thành fragment; Thêm các nút chức năng phát triển cho member; Cấu trúc lại thư mục

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,16 +69,15 @@
 
     </LinearLayout>
 
-    <FrameLayout
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/body_main"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/bottom_bar_main"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appbar_main">
-
-    </FrameLayout>
+        app:layout_constraintTop_toBottomOf="@+id/appbar_main"
+        app:menu="@menu/bottom_navigation_main" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_bar_main"
