--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -105,7 +105,7 @@
         android:paddingVertical="15dp">
 
         <TextView
-            android:id="@+id/title_about_about"
+            android:id="@+id/title_settings_about"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/settings_about_title"
@@ -116,6 +116,90 @@
 
     <View
         android:id="@+id/divider2"
+        android:layout_width="match_parent"
+        android:layout_height="0.7dp"
+        android:background="@color/divider" />
+
+    <LinearLayout
+        android:id="@+id/temp1_settings"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="auto"
+        android:onClick="function1"
+        android:orientation="horizontal"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="15dp">
+
+        <TextView
+            android:id="@+id/title_settings_temp1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nút thứ nhất"
+            android:textColor="@color/black"
+            android:textSize="@dimen/settings_title_size" />
+
+    </LinearLayout>
+
+    <View
+        android:id="@+id/divider3"
+        android:layout_width="match_parent"
+        android:layout_height="0.7dp"
+        android:background="@color/divider" />
+
+    <LinearLayout
+        android:id="@+id/temp2_settings"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="auto"
+        android:onClick="function2"
+        android:orientation="horizontal"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="15dp">
+
+        <TextView
+            android:id="@+id/title_settings_temp2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nút thứ hai"
+            android:textColor="@color/black"
+            android:textSize="@dimen/settings_title_size" />
+
+    </LinearLayout>
+
+    <View
+        android:id="@+id/divider4"
+        android:layout_width="match_parent"
+        android:layout_height="0.7dp"
+        android:background="@color/divider" />
+
+    <LinearLayout
+        android:id="@+id/temp3_settings"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="auto"
+        android:onClick="function3"
+        android:orientation="horizontal"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="15dp">
+
+        <TextView
+            android:id="@+id/title_settings_temp3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nút thứ ba"
+            android:textColor="@color/black"
+            android:textSize="@dimen/settings_title_size" />
+
+    </LinearLayout>
+
+    <View
+        android:id="@+id/divider5"
         android:layout_width="match_parent"
         android:layout_height="0.7dp"
         android:background="@color/divider" />
