--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="primary">#FF03A9F4</color>
     <color name="ripple_button">#17000000</color>
     <color name="divider">#EFEFEF</color>
+    <color name="login_vault_background">#1C1C1C</color>
 </resources>
