--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,7 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="shape_circle" parent="">
-        <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">50dp</item>
+    <style name="AppTheme" parent="Theme.AppCompat.DayNight">
+        <item name="background_color">@color/white</item>
+        <item name="primary_color">@color/primary</item>
+        <item name="on_primary_color">@color/white</item>
+        <item name="secondary_color">@color/secondary</item>
+        <item name="inactive_color">@color/grey</item>
+<!--        <item name="text_color">@color/black</item>-->
+        <item name="divider_color">@color/divider_light</item>
+
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorSecondary">@color/white</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:popupBackground">@color/white</item>
+        <item name="android:itemBackground">@color/white</item>
+
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppThemeDark" parent="Theme.AppCompat.DayNight">
+        <item name="background_color">@color/dark</item>
+        <item name="primary_color">@color/primary</item>
+        <item name="on_primary_color">@color/white</item>
+        <item name="secondary_color">@color/secondary</item>
+        <item name="inactive_color">@color/grey</item>
+<!--        <item name="text_color">@color/white</item>-->
+        <item name="divider_color">@color/dark</item>
+
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorSecondary">@color/white</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:popupBackground">@color/grey</item>
+        <item name="android:itemBackground">@color/grey</item>
+
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="SwitchColor" parent="Theme.AppCompat.Light">
+        <item name="colorControlActivated">@color/primary</item>
+        <item name="android:colorForeground">?android:textColor</item>
+    </style>
+
+    <style name="AppBarTheme" parent="@style/ThemeOverlay.AppCompat.ActionBar">
+        <item name="colorControlNormal">?attr/on_primary_color</item>
     </style>
 </resources>
